--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 log/mongo.log
 log/screenshot/
 log/reports.html
+log/screenshots/tentar_logar_exemplos_4.png
+log/screenshots/tentar_logar_exemplos_2.png
+log/screenshots/tentar_logar_exemplos_1.png
+log/screenshots/tentar_logar_exemplos_5.png
+log/screenshots/tentar_logar_exemplos_3.png
