add instruçõe do jenkins no readme

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ log/screenshots/tentar_logar_exemplos_1.png
 log/screenshots/tentar_logar_exemplos_5.png
 log/screenshots/tentar_logar_exemplos_3.png
 log/screenshots/
+log/reports.json
